--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,13 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.ProfileFragment">
 
+    <include
+        android:id="@+id/main_top_app_bar_profile"
+        layout="@layout/app_bar_profile" />
+
     <TextView
-        android:layout_centerInParent="true"
-        android:text="Profile Fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
+        android:layout_centerInParent="true"
         android:fontFamily="@font/montserrat_bold"
-        />
-
+        android:gravity="center"
+        android:text="Your Profile"
+        android:textSize="40dp" />
 </RelativeLayout>
