--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -49,6 +49,7 @@
                     android:hint="Enter First Name">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/firstName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nunitosans_bold" />
@@ -56,7 +57,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/lastName"
+                    android:id="@+id/lastNameStatic"
                     style="@style/TextInputStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -64,6 +65,7 @@
                     android:hint="Enter Last Name">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/lastName"
                         style="@style/TextInputEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -80,6 +82,7 @@
                     android:hint="Enter Email Address">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/emailAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nunitosans_bold" />
@@ -91,11 +94,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:checkedButton="@+id/radio_button_1"
+                    android:checkedButton="@+id/buyer"
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:id="@+id/radio_button_1"
+                        android:id="@+id/buyer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -105,7 +108,7 @@
                         android:textSize="20dp" />
 
                     <RadioButton
-                        android:id="@+id/radio_button_2"
+                        android:id="@+id/seller"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -116,7 +119,7 @@
                 </RadioGroup>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/password"
+                    android:id="@+id/passwordStaticText"
                     style="@style/TextInputStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -124,6 +127,7 @@
                     android:hint="Enter Password">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nunitosans_bold"
@@ -161,6 +165,14 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <ProgressBar
+        android:layout_centerInParent="true"
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
