--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.BookStore" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">#989898</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -71,7 +71,16 @@
 
     <style name="AddToCartButton" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">#10B5FF</item>
+    </style>
 
+    <style name="SearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:background">@drawable/edittext_background_light</item>
+        <item name="android:textColorHint">@color/black</item>
+
+    </style>
+
+    <style name="bottomSheet" parent="Widget.Material3.Button.TextButton">
+        <item name="android:textColor">@color/black</item>
     </style>
 
 
