--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -10,16 +10,24 @@
         android:id="@+id/main_top_app_bar_cart"
         layout="@layout/app_bar_cart" />
 
+    <View
+        android:layout_below="@id/main_top_app_bar_cart"
+        android:id="@+id/topDivider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
     <LinearLayout
+        android:id="@+id/amount"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/main_top_app_bar_cart"
+        android:layout_below="@id/topDivider"
         android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/totalAmountText"
+            android:id="@+id/totalAmountStaticText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -29,27 +37,47 @@
             android:textSize="25dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/totalAmout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/montserrat_bold"
-            android:text="₹ 1000"
+            android:text="0"
             android:textSize="25dp" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/bottomDivider"
+        android:layout_below="@id/amount"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cartRecyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/checkout"
+        android:layout_below="@id/bottomDivider" />
+
     <TextView
+        android:id="@+id/noItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/montserrat_bold"
         android:gravity="center"
+        tools:visibility="visible"
+        android:visibility="gone"
         android:text="No Items in Cart ☹️"
         android:textSize="35dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/addToCart"
+        android:id="@+id/checkout"
         style="@style/AddToCartButton"
         android:layout_width="match_parent"
         android:layout_height="65dp"
@@ -61,4 +89,6 @@
         app:icon="@drawable/ic_checkout"
         app:iconGravity="textStart"
         app:iconSize="20dp" />
+
+
 </RelativeLayout>
