--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragment.SignUpFragment">
+    tools:context=".ui.fragment.onboarding.SignUpFragment">
 
     <include
         android:id="@+id/mainTopAppBar"
