--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragment.SignInFragment">
+    tools:context=".ui.fragment.onboarding.SignInFragment">
 
     <include layout="@layout/app_bar" />
 
